# postbinary

./: .gitignore  CMakeLists.txt  Postbinary.h  README.md  SensorSimulator.h  main.cpp  test.cpp
headers/: Constants.h  Service.h  Utilities.h
headers/abstracts/: Fractional.h  Number.h
headers/constants/: BinaryDigitCapacity.h  DigitNumbers.h  Exceptions.h  FractionalFieldSize.h  TetralogicalDigitCapacity.h  TetralogicalState.h
headers/service/: Definitions.h
headers/types/: Package.h  Pb128_32ip.h  Pb64_32p.h
headers/utilities/: ByteOrder.h  Compressor.h  Convert.h
src/abstracts/: Fractional.cpp  Number.cpp
src/types/: Package.cpp
src/utilities/: ByteOrder.cpp  Compressor.cpp  Convert.cpp
swig/python/: Compressor.i  Compressor.py  Fractional.i  Number.i  Package.i  Package.py  Pb128_32ip.i  Pb64_32p.i  Postbinary.i  _test.py  make.bat  makefile  makefile_linux
